force-app/main/default/objects/Invoice__c/fields/Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount__c</fullName>
    <label>Advance Amount</label>
    <summarizedField>Invoice_Line_Item__c.Advance_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>