force-app/main/default/objects/Invoice__c/fields/Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>