force-app/main/default/objects/Invoice__c/fields/Course_Run_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Owner_Email__c</fullName>
    <description>MVP1.0 Course Run Owner (Email)</description>
    <inlineHelpText>Course Run Owner (Email)</inlineHelpText>
    <label>Course Run Owner (Email)</label>
    <type>Email</type>
</CustomField>