force-app/main/default/objects/Invoice__c/fields/Couse_Run_Owner__c.field-meta.xml
<CustomField>
    <fullName>Couse_Run_Owner__c</fullName>
    <formula>/***
Course_Registration__r.Course_Run_Id__r.Owner:User.FirstName &amp; &quot; &quot;&amp;
Course_Registration__r.Course_Run_Id__r.Owner:User.LastName
***/

if(text(  CreatedBy.UserType )==&quot;Standard&quot;, CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName,&quot;System&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Couse Run Owner</label>
    <type>Text</type>
</CustomField>