force-app/main/default/objects/Invoice__c/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <formula>Nett_Amount__c +  Nett_GST_Amount__c - (Advance_Amount__c +  Advance_GST_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>