force-app/main/default/objects/Invoice__c/fields/Funding_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Funding_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding Invoice</label>
    <type>Checkbox</type>
</CustomField>