force-app/main/default/objects/Invoice__c/fields/Generate_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Generate_Receipt__c</fullName>
    <description>System field to indicate to system to publish generate receipt event upon receiving reference no</description>
    <label>Generate Receipt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>