force-app/main/default/objects/Invoice__c/fields/Invoice_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Items__c</fullName>
    <description>(MVP 1.0) - Number of related Invoice Line Items</description>
    <label>Invoice Line Items</label>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>