force-app/main/default/objects/Invoice__c/fields/Invoice_Status_Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status_Final_Amount__c</fullName>
    <formula>Text(Status__c) &amp; &quot;-&quot; &amp; Text(Final_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status Final Amount</label>
    <type>Text</type>
</CustomField>