force-app/main/default/objects/Invoice__c/fields/Learner_Email__c.field-meta.xml
<CustomField>
    <fullName>Learner_Email__c</fullName>
    <description>MVP1.0 Learner (Email)</description>
    <inlineHelpText>Learner (Email)</inlineHelpText>
    <label>Learner (Email)</label>
    <type>Email</type>
</CustomField>