force-app/main/default/objects/Invoice__c/fields/Nett_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Nett_GST_Amount__c</fullName>
    <label>Nett GST Amount</label>
    <summarizedField>Invoice_Line_Item__c.Nett_GST_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>