force-app/main/default/objects/Invoice__c/fields/Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Reference_No__c</fullName>
    <externalId>true</externalId>
    <label>Invoice No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>