force-app/main/default/objects/Invoice__c/fields/Show_Learner_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Show_Learner_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Learner Invoice</label>
    <referenceTo>Course_Registration__c</referenceTo>
    <relationshipLabel>Learner Invoices</relationshipLabel>
    <relationshipName>LearnerInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>