force-app/main/default/objects/Invoice__c/fields/Staff_Reg_Record_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Staff_Reg_Record_Purpose__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate that billing is meant for SIM Staff for the course registered</description>
    <label>Staff Reg - Record Purpose</label>
    <type>Checkbox</type>
</CustomField>