force-app/main/default/objects/Invoice__c/fields/System_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Id__c</fullName>
    <formula>IF(ISBLANK(Course_Registration__c),&quot;SDP&quot;,
   IF(AND(ISPICKVAL(Course_Registration__r.Course_Run_Id__r.Course__r.Provider__c, &apos;SIM&apos;), 
          Course_Registration__r.Course_Run_Id__r.Course__r.RecordType.DeveloperName == &apos;Course&apos;), &quot;SDP&quot;,
   IF(AND(ISPICKVAL(Course_Registration__r.Course_Run_Id__r.Course__r.Provider__c, &apos;SIM&apos;), 
          Course_Registration__r.Course_Run_Id__r.Course__r.RecordType.DeveloperName == &apos;Event&apos;), &quot;SDP&quot;,
   IF(AND(ISPICKVAL(Course_Registration__r.Course_Run_Id__r.Course__r.Provider__c, &apos;SIM&apos;), 
          Course_Registration__r.Course_Run_Id__r.Course__r.RecordType.DeveloperName == &apos;Funded_Course&apos;), &quot;SD&quot;,
   IF(AND(ISPICKVAL(Course_Registration__r.Course_Run_Id__r.Course__r.Provider__c, &apos;RMIT&apos;), 
          Course_Registration__r.Course_Run_Id__r.Course__r.RecordType.DeveloperName == &apos;Course&apos;), &quot;SDR&quot;, &quot;SDP&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Id</label>
    <type>Text</type>
</CustomField>