force-app/main/default/objects/Invoice__c/fields/Utilized_Advance_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Utilized_Advance_GST_Amount__c</fullName>
    <label>Utilized Advance GST Amount</label>
    <summarizedField>Invoice_Line_Item__c.Utilized_Advance_GST_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>