force-app/main/default/objects/Invoice__c/recordTypes/Account_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Account_Invoice</fullName>
    <active>true</active>
    <description>For Account-based Invoicing</description>
    <label>Account Invoice</label>
</RecordType>