force-app/main/default/objects/Invoice__c/recordTypes/Registration_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Registration_Invoice</fullName>
    <active>true</active>
    <description>For Course Registration-based invoicing</description>
    <label>Registration Invoice</label>
</RecordType>