force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Course_Registration__c</columns>
    <columns>NAME</columns>
    <columns>Reference_No__c</columns>
    <columns>Invoice_Type__c</columns>
    <columns>Final_Amount__c</columns>
    <columns>Nett_Amount__c</columns>
    <columns>Nett_GST_Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>