force-app/main/default/objects/Invoice__c/listViews/Invoice_on_11th.listView-meta.xml
<ListView>
    <fullName>Invoice_on_11th</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Course_Registration__c</columns>
    <columns>NAME</columns>
    <columns>Reference_No__c</columns>
    <columns>Nett_Amount__c</columns>
    <columns>Nett_GST_Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>11/11/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>,11/12/2020 12:00 AM</value>
    </filters>
    <label>Invoice on 11th</label>
</ListView>